--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "vite": "^6.0.5"
+  },
+  "dependencies": {
+    "d3": "^7.9.0"
   }
 }
